feat: fiche detail resto

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccueil2">#A6CD01</color>
     <color name="colorAccueil3">#6369AA</color>
     <color name="colorAccueil4">#FE6B6B</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
